[package]
name = "recipemd"
version = "0.1.0"
edition = "2021"

[features]
default = ["diagnostics"]
diagnostics = ["miette"]
tests = ["diagnostics", "miette/fancy"]

[dependencies]
lazy-regex = "3.0.0"
miette = { version = "5.9.0", optional = true }
pulldown-cmark = "0.9.3"
serde = { version = "1.0.171", optional = true, features = ["derive"] }
thiserror = "1.0.43"

[dev-dependencies]
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
serde_json = "1.0.102"
