[package]
name = "recipemd"
version = "0.2.0"
edition = "2021"
authors = ["d-k-bo <d-k-bo@mailbox.org>"]
description = "Parser for the RecipeMD format"
repository = "https://github.com/d-k-bo/recipemd-rs"
license = "LGPL-3.0-or-later"
keywords = ["recipe", "recipes", "markdown", "cooking", "cooking-recipes"]
categories = ["parser-implementations", "text-processing"]

[features]
default = ["diagnostics"]
diagnostics = ["miette"]
tests = ["diagnostics", "miette/fancy"]

[dependencies]
lazy-regex = "3.4.1"
miette = { version = "7.4.0", optional = true }
pulldown-cmark = "0.13.0"
pulldown-cmark-escape = "0.11.0"
serde = { version = "1.0.217", optional = true, features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1.0.137"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
